# EldenRingAssetsAttractor

./: .gitignore  README.md  pyproject.toml
.agents/skills/extract-assets/: SKILL.md
.agents/skills/extract-map-piece/: SKILL.md
.agents/skills/extract-materials/: SKILL.md
.agents/skills/extract-msb-dcx/: SKILL.md
.agents/skills/extract-textures/: SKILL.md
src/extractor/: assets.py  cli.py  config.py  map_piece.py  materials.py  msb_dcx.py  textures.py
