[project]
name = "elden-ring-assets-attractor"
version = "0.1.0"
description = "自动化艾尔登法环资产解压与处理工具"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
extract = "extractor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extractor"]

[tool.uv]
package = true
